--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/qr-logo.svg" />
+    <link href="/src/assets/images/bg.png" rel="preload" as="image">
+    <link href="/src/assets/images/logo-header.png" rel="preload" as="image">
     <title>QRupones</title>
   </head>
   <body>
